add_executable(
    cxxet_large_bench_postprocess
        src/log.cxx
        src/main.cxx
)
target_include_directories(
    cxxet_large_bench_postprocess
        PRIVATE
            "${CMAKE_CURRENT_LIST_DIR}/include"
)
target_link_libraries(
    cxxet_large_bench_postprocess
        PUBLIC
            nlohmann_json::nlohmann_json
)
add_unix_compiler_flags(cxxet_large_bench_postprocess)
add_sanitizers(cxxet_large_bench_postprocess)

add_dependencies(
    cxxet_large_benchmarks
        cxxet_large_bench_postprocess
)
